<resources>
    <string name="app_name">MegaQuiz</string>
    <string name="for_random_btn">Случайный опрос</string>
    <string name="for_category_btn">Список опросов</string>
    <string name="for_true_button">Истина</string>
    <string name="for_false_button">Ложь</string>
    <string name="for_next_button">Далее</string>
    <string name="for_prev_button">Назад</string>
    <string name="for_category_name">Название категории:</string>
    <string name="for_quiz_size">Всего вопросов:</string>
    <string name="for_number_of_question">Номер вопроса:</string>
    <string name="for_number_header">№"\n"опроса</string>
    <string name="for_name_category_header">Название"\n"категории</string>
    <string name="for_quiz_size_header">Количество"\n"вопросов</string>
    <string name="for_restart_button">Пройти"\n"заново</string>
    <string name="for_go_to_QS_button">Вернуться"\n"к списку</string>
    <string name="for_go_to_start_button">На главный"\n"экран</string>
    <string name="for_result_header_text_view">Результаты опроса:</string>
    <string name="for_switch_text">Показать пустые категории</string>

    <!-- For Navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
