<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quizResult.QuizResultView">

    <TextView
        android:id="@+id/result_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Результаты опроса:"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/result_header"
        app:layout_constraintStart_toStartOf="@id/result_header"
        app:layout_constraintTop_toBottomOf="@id/result_header"
        tools:text="sjdkfsdljfjsldjlsdjgls" />

    <Button
        android:id="@+id/restart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/for_restart_button"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_text" />

    <Button
        android:id="@+id/go_to_QS_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/for_go_to_QS_button"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/restart_button"
        app:layout_constraintTop_toTopOf="@id/restart_button" />

    <Button
        android:id="@+id/go_to_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/for_go_to_start_button"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/restart_button"
        app:layout_constraintTop_toTopOf="@id/restart_button" />

</android.support.constraint.ConstraintLayout>