<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/guideline1_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline1_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <View
        android:id="@+id/background_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_for_quiz_background"
        app:layout_constraintBottom_toBottomOf="@id/guideline1_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/static_category_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/background_for_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="GENERAL" />

    <View
        android:id="@+id/background_for_question"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@drawable/shape_for_quiz_question_background"
        app:layout_constraintEnd_toEndOf="@id/guideline2_vertical"
        app:layout_constraintStart_toStartOf="@id/guideline1_vertical"
        app:layout_constraintTop_toTopOf="@id/guideline3_horizontal" />

    <TextView
        android:id="@+id/question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/background_for_question"
        app:layout_constraintEnd_toEndOf="@id/background_for_question"
        app:layout_constraintStart_toStartOf="@id/background_for_question"
        app:layout_constraintTop_toTopOf="@id/background_for_question"
        tools:text="QUESTION" />

    <Button
        android:id="@+id/btnTrue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/shape_for_true_button"
        android:drawableStart="@drawable/ic_for_true_button"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        android:text="@string/for_true_button"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/guideline3_vertical"
        app:layout_constraintStart_toStartOf="@id/guideline1_vertical"
        app:layout_constraintTop_toBottomOf="@id/background_for_question" />

    <Button
        android:id="@+id/btnFalse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/shape_for_false_button"
        android:drawableEnd="@drawable/ic_for_false_button"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:text="@string/for_false_button"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/background_for_question"
        app:layout_constraintStart_toStartOf="@id/guideline3_vertical"
        app:layout_constraintTop_toTopOf="@id/btnTrue" />

    <Button
        android:id="@+id/btnPrev"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/selectore_for_prev_button"
        android:drawableStart="@drawable/ic_for_prev_button"
        android:paddingStart="15dp"
        android:paddingEnd="20dp"
        android:text="@string/for_prev_button"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/btnTrue"
        app:layout_constraintStart_toStartOf="@id/btnTrue"
        app:layout_constraintTop_toBottomOf="@id/btnTrue" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_for_next_button"
        android:drawableEnd="@drawable/ic_for_next_button"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:text="@string/for_next_button"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/btnFalse"
        app:layout_constraintStart_toStartOf="@id/btnFalse"
        app:layout_constraintTop_toTopOf="@id/btnPrev" />

    <!--
    <ProgressBar
        android:id="@+id/progres_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    -->

    <net.bohush.geometricprogressview.GeometricProgressView
        android:id="@+id/progress_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="invisible"
        app:gp_color="@color/colorGreen"
        app:gp_duration="500"
        app:gp_figure_padding="2dp"
        app:gp_number_of_angles="4"
        app:gp_type="kite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/background_for_question" />

    <TextView
        android:id="@+id/question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorLightGray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/background_for_question"
        app:layout_constraintStart_toStartOf="@id/background_for_question"
        app:layout_constraintTop_toTopOf="@id/background_for_question"
        tools:text="3/6" />

</android.support.constraint.ConstraintLayout>